Integrate Decap CMS and update project/model data structure
Added Decap CMS configuration and admin interface for project management. Introduced a script to auto-update models and datasets from HuggingFace. Refactored projects.json to use a 'projects' array for CMS compatibility and updated all usages accordingly. Improved ProjectCard image path handling. Updated models.json with new structure and data. Enhanced package.json scripts to include model updates and CMS proxy.

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "node scripts/update-articles.js && astro dev",
-    "build": "node scripts/update-articles.js && astro build",
+    "dev": "node scripts/update-articles.js && node scripts/update-models.js && astro dev",
+    "build": "node scripts/update-articles.js && node scripts/update-models.js && astro build",
     "preview": "astro preview",
+    "proxy": "npx decap-server",
     "astro": "astro"
   },
   "dependencies": {
